Added navigation, updated background colour

--- a/views/index.pug
+++ b/views/index.pug
@@ -38,5 +38,6 @@ html(lang="en")
             block content
 
         include ./partials/noscript
+        include ./partials/navigation
 
         script(src="main.js")
