--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -4,5 +4,6 @@ block variables
     - var template = 'home'
 
 block content
-    .home
-        h1.home__welcome Home
+    .home(data-background="#c97164" data-color="#f9f1e7")
+        .home__wrapper
+            
