--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
 
         title="Lonjezo Dzilankhulani"
 
-        meta(name="description" content="WE ROCK!")
+        meta(name="description" content="")
 
         //- link(rel="apple-touch-icon" sizes="180x180" href="image/favicons/apple-touch-icon.png")
         //- link(rel="icon" type="image/png" sizes="32x32" href="image/favicons/favicon-32x32.png")
@@ -23,13 +23,13 @@ html(lang="en")
         meta(name="theme-color" content="#cdccb4")
 
         meta(property="og:type" content="website")
-        meta(property="og:title" content="Welcome Late Night Coders")
-        meta(property="og:description" content="We are late night coders - WE ROCK!")
+        meta(property="og:title" content="")
+        meta(property="og:description" content="")
         //- meta(property="og:image" content=meta.data.image ? meta.data.image.url : '')
 
         meta(name="twitter:card" content="summary_large_image")
-        meta(name="twitter:title" content="Welcome Late Night Coders")
-        meta(name="twitter:description" content="We are late night coders - WE ROCK!")
+        meta(name="twitter:title" content="")
+        meta(name="twitter:description" content="")
         //- meta(name="twitter:image" content=meta.data.image ? meta.data.image.url : '')
 
     body
