--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -7,6 +7,8 @@ block content
     .home(data-background="#c97164" data-color="#000000")
         .home__wrapper
             .home__introduction
-                .home__introduction__text=home.data.introduction
+                .home__introduction__text=home.data.introduction[0].text
+                .home__introduction__image=(src=home.data.introduction[0].image.url)
+                
 
             
