--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,15 +1,51 @@
-.home {
-    margin-top: 2rem;
-    display: flex;
-    align-content: center;
-    align-items: center;
-    flex-direction: column;
+.home{
+
+
 }
 
-.home__welcome {
-    text-transform: uppercase;
+.home__wrapper{
+
+
 }
 
-.home__youtube__channel__link {
-    margin-top: 2rem;
+.home__introduction{
+
+
 }
+
+.home__introduction__text{
+
+
+}
+
+.home__projects{
+
+
+}
+
+.home__projects__title{
+
+
+}
+
+.home__about-me{
+
+
+}
+
+.home__about-me__title{
+
+
+}
+
+.home__about-me__description{
+    @extend %title-55;
+
+}
+
+.home__about-me__technologies{
+
+
+}
+
+        
