--- a/styles/shared/shared.scss
+++ b/styles/shared/shared.scss
@@ -5,7 +5,7 @@
 
 html,
 body {
-    overflow-x: hidden;
+    // overflow-x: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
