--- a/styles/mixins/_titles.scss
+++ b/styles/mixins/_titles.scss
@@ -1,4 +1,20 @@
-%title-55 {
+%title-24{
+  font-family: $font-neue-haas;
+  font-weight: 100;
+  font-size: 2.58rem;
+}
+%title-30 {
     font-family: $font-neue-haas;
-    font-size: 5.5rem;
+    font-size: 3rem;
+  }
+
+%title-45{
+    font-family: $font-neue-haas;
+    font-size: 4.5rem;
+  }
+
+%title-69 {
+    font-family: $font-neue-haas;
+    font-size: 6.9rem;
+    color: #282828;
   }
