--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -8,7 +8,7 @@ block content
         .home__wrapper
             .home__introduction
                 .home__introduction__text=home.data.introduction[0].text
-                //- img.home__introduction__image(src=home.data.introduction[0].image.url)
+                img.home__introduction__image(src=home.data.introduction[0].image.url)
 
             .home__projects 
                 .home__projects__title=home.data.projects[0].title
@@ -20,8 +20,3 @@ block content
 
                 .home__about-me__technologies 
                 
-
-            
-                
-
-            
